# biostatistics

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  tasks.py
.github/workflows/: deploy_docs.yml  on_pr.yml  system_test_decodeme.yml
Analysis/MAGMA_DecodeME_Analysis/: index.html
Analysis/MAGMA_IBD_Analysis/: index.html
Techniques/MAGMA_Overview/: index.html
Techniques_And_Concepts/LDSC/: index.html
docs/: index.md
docs/Analysis/: MAGMA_DecodeME_Analysis.md  MAGMA_IBD_Analysis.md
docs/Techniques_And_Concepts/: Heritability.md  LDSC.md
docs/techniques/: MAGMA_Overview.md
experiments/: plot_magma_p_values.py
experiments/tralfamadorian97/: analyze_rnaseq_data.py  check_snp151_schema.py  compare_ensmbl_ids.py  examine_ibd_data.py  explore_mach_score.py  make_dummy_processed_gwas_file.py  plot_magma_p_values.py  unique_chroms.py
mecfs_bio/: __init__.py
mecfs_bio/analysis/: decode_me_initial_analysis.py  decodeme_magma_analysis.py  ibd_analysis.py  lee_educational_attainment_analysis.py  psoriasis_analysis.py  psoriasis_h2_by_ldsc.py
mecfs_bio/assets/: __init__.py
mecfs_bio/build_system/: __init__.py
notes/: decodeme_lead_variant_comparison.md
reference/mecfs_bio/: index.html
search/: search_index.json
src/analysis_operations/: genetic_correlation_gwaslab.py
src/data_preprocessing_scripts/: apply_decode_me_quality_control.py  apply_gwaslab.py  decode_me_manhattan_plot.py  file_path_constants.py  print_significant_snps.py
src/data_processing/: apply_quality_control.py  decode_me_constants.py  find_significant_snps.py  preprocess_for_big_agwas.py
src/data_processing_util/: gzip_util.py
src/data_pull_scripts/: data_pull.py
src/data_pull_util/: data_source.py  data_verifier.py  get_miscl.py  gwas_summary_data.py
src/data_types/: variant.py
src/general/: timing_util.py
src/plotting/: manhattan.py  manhattan_gwaslab.py  save_fig.py
(+574 files in other folders)
