[project]
name = "biostatistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geneview>=0.2.1",
    "gwaslab==3.6.8",
    "invoke>=2.2.0",
    "matplotlib>=3.8",
    "numpy>=1.21.2",
    "osfclient>=0.0.5",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "xarray>=2025.9.1",
]
