[project]
name = "biostatistics"
version = "0.1.0"
description = "A project apply biostatistical techniques to publicly available data on ME/CFS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=25.2.0",
    "emoji>=2.15.0",
    "geneview>=0.2.1",
    "gwaslab==3.6.8",
    "invoke>=2.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.8",
    "mypy>=1.18.2",
    "narwhals>=2.6.0",
    "networkx>=3.5",
    "numpy>=1.21.2",
    "osfclient>=0.0.5",
    "pandas>=2.3.3",
    "pandasgwas>=1.2.2",
    "pathlib-abc>=0.5.2",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "py3-wget>=1.0.13",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "tqdm>=4.67.1",
    "typeguard>=4.4.4",
    "types-networkx>=3.5.0.20251001",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
    "universal-pathlib>=0.3.4",
    "xarray>=2025.9.1",
]
